...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#DE000000" />

        <TextView
            android:id="@+id/lbl_task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:lines="1"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_project"
            app:layout_constraintTop_toTopOf="@id/img_project"
            tools:text="@sample/tasks.json/data/taskName" />

        <TextView
            android:id="@+id/lbl_project_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/img_project"
...
