...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_list"
        android:title="@string/label_action_filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_by_project"
...
